--- a/estilos/relatorios.css
+++ b/estilos/relatorios.css
@@ -274,3 +274,102 @@ button:hover {
 #confirmardelete, #confirmaredit{
   width: 10vw;
 }
+
+
+
+/* Tornar a página responsiva */
+
+/* Estilos para telas menores, como smartphones */
+@media (max-width: 768px) {
+  .container {
+    width: 95%;
+    margin: 0;
+    padding: 0;
+  }
+
+  .botoes-mostra {
+    flex-direction: column;
+    gap: 5vw;
+  }
+
+  button, input[type="submit"], input[type="button"] {
+    width: 100%;
+    padding: 10px;
+  }
+
+  .chart-info-container {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .chart-container-pizza {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+  }
+
+  .box-info-box {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .info-box {
+    width: 100%;
+  }
+
+  #pesquisa {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  #pesquisa input[type="text"], #pesquisa input[type="submit"] {
+    width: 100%;
+    margin: 5px 0;
+  }
+
+  .modal-content {
+    width: 95%;
+    margin: 10% auto;
+  }
+}
+
+/* Estilos para tablets em modo paisagem */
+@media (max-width: 1024px) {
+  .container {
+    width: 90%;
+  }
+
+  .chart-info-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .chart-container-pizza {
+    max-width: 80%;
+  }
+
+  .box-info-box {
+    margin-left: 0;
+    width: 80%;
+  }
+
+  .info-box {
+    width: 80%;
+  }
+}
+
+/* Estilos para telas muito pequenas */
+@media (max-width: 480px) {
+  button, input[type="submit"], input[type="button"] {
+    font-size: 14px;
+  }
+
+  .info-box {
+    padding: 5%;
+    font-size: 14px;
+  }
+
+  #confirmardelete, #confirmaredit {
+    width: 80%;
+  }
+}
