--- a/estilos/relatorio.css
+++ b/estilos/relatorio.css
@@ -2,35 +2,37 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 /* Estilo para o corpo da página */
 body {
   font-family: Arial, sans-serif;
-  background-color: #ca1313;
+  background-color: #f4f4f4;
   color: #333;
+  display: flex; /* Adiciona flexbox */
+  justify-content: center; /* Centraliza horizontalmente */
+  height: 100vh; /* Usa toda a altura da tela */
+  margin: 0; /* Remove a margem padrão */
 }
 
 /* Container geral */
 .container {
   max-width: 1200px;
-  margin: 0 auto;
   padding: 20px;
-  background: #fff;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Títulos */
 .hdois h2, .hdois h3 {
   color: #ff66b2; /* Cor rosa para destacar títulos */
-  margin-bottom: 20px;
+  margin-top: 3rem;
+  text-align: center; /* Centraliza os títulos */
+  font-size: 1.6rem;
 }
 
 /* Botões de navegação */
 .botoes-mostra {
   margin-bottom: 20px;
+  text-align: center; /* Centraliza os botões */
 }
 
 .botoes-mostra a {
@@ -44,9 +46,13 @@ body {
   border-radius: 4px;
   padding: 10px 20px;
   cursor: pointer;
-  font-size: 16px;
-  margin-right: 10px;
+  font-size: 1.3rem;
+  width: 13vw;
+  gap: 5%;
   transition: background-color 0.3s;
+  margin: 1%;
+  margin-top: 3%;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
 .botoes-mostra button:hover {
@@ -55,9 +61,11 @@ body {
 
 /* Tabela de resultados */
 table {
-  width: 100%;
+  width: 80%; /* Define uma largura fixa para a tabela */
+  margin: 3rem auto; /* Centraliza a tabela horizontalmente */
   border-collapse: collapse;
-  margin-top: 20px;
+  background-color: #fff;   text-align: center;
+
 }
 
 table thead {
@@ -67,7 +75,6 @@ table thead {
 
 table th, table td {
   padding: 12px;
-  text-align: left;
   border-bottom: 1px solid #ddd;
 }
 
@@ -79,41 +86,52 @@ table tr:nth-child(even) {
 .box-info-box {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 20px;
+  flex-direction: column; 
 }
 
+/* Caixas de informação */
 .info-box {
-  background-color: #ff66b2;
-  color: #fff;
-  padding: 20px;
-  border-radius: 4px;
+  background-color: #fff;
+  padding: 4%;
+  width: 20vw;
+  margin-bottom: 1.3rem;
+  border-radius: 5px;
+  border: 0.2vw solid #ff66b2; /* Adiciona borda rosa */
   text-align: center;
-  width: 30%;
+  height: auto; /* Ajuste a altura para auto */
 }
 
 .info-box-title {
   font-size: 18px;
   margin-bottom: 10px;
+  color: #ff66b2;
+  font-weight: bold;
 }
 
 /* Containers de gráfico */
 .chart-info-container {
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 30px;
-}
-
-.chart-container-pizza {
+  align-items: center;
+  gap: 20px;
+  padding: 5%;
+  background: #fff;
+  height: 16rem;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   width: 60%;
+  margin: 0 auto; /* Centraliza o container do gráfico */
+  justify-content: space-between;
 }
 
+/* Estilo para inputs e botões de pesquisa */
 .search-container {
-  margin-bottom: 20px;
+  margin-top: 3rem;
+  text-align: center; /* Centraliza a barra de pesquisa */
 }
 
 .search-container form {
   display: flex;
-  align-items: center;
+  justify-content: center; /* Centraliza o formulário */
 }
 
 .search-container input[type="text"] {
@@ -122,7 +140,7 @@ table tr:nth-child(even) {
   border: 1px solid #ddd;
   border-radius: 4px;
   margin-right: 10px;
-  width: 250px;
+  width: 50vw;
 }
 
 .search-container input[type="submit"] {
@@ -139,6 +157,38 @@ table tr:nth-child(even) {
   background-color: #e55a9b;
 }
 
+#botaoeditar, #botaoexcluir{
+  width: 5vw;
+  margin: 5%;
+  transition: background-color 0.3s;
+}
+
+#botaoeditar{
+  background-color: #fd78bb;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 5%;
+}
+
+#botaoexcluir {
+  background-color: #df619c;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 5%;
+}
+
+#botaoeditar:hover{
+  transform: scale(1.1);
+}
+
+#botaoexcluir:hover{
+  transform: scale(1.1);  
+}
+
 /* Estilo para modais */
 .modal {
   display: none;
@@ -149,7 +199,6 @@ table tr:nth-child(even) {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0);
   background-color: rgba(0,0,0,0.4);
   padding-top: 60px;
 }
@@ -226,4 +275,26 @@ table tr:nth-child(even) {
 
 .autocomplete-list li:hover {
   background-color: #f4f4f4;
+}
+
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.pagination a {
+  margin: 0 5px;
+  text-decoration: none;
+  color: #007BFF;
+}
+
+.pagination a.active {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.pagination a:hover {
+  text-decoration: underline;
 }
